# alib4c

./: .buffers.d  .cvsignore  .error.d  .flail.d  .gitignore  .resolve.d  Makefile.am  Makefile.in  README  aclocal.m4  config.vars  configure  configure.ac
a/: .cvsignore  .gitignore  Makefile.am  Makefile.in  alloca.h.in  bintree.c  bintree.h  cc.h  clean.h.in  clean_mod.h  collect.c  collect.h  cpp.h  debug.c  debug.h  die.c  die.h  error.c  error.h.in  find_types.pl  hash.c  hash.h  left_over_su.sh  list.c  list.h  mem.c  mem.h.in  pot.c  pot.h  resolve.c  resolve.h.in  sock.c  sock.h.in  strerr_notes.c  strerr_notes.h  types.h.in  util.c  util.h.in  varg.h.in  vec.h.in  (+2 more)
a/newer/: util.c  util.h  xmem.h
a/old/: clean.c  clean.h.in  clean_mod.h  dict.c  dict.h  die.c  die.h  error.c  error.h.in  error_mod.h.in  strerr_win.c  strerr_win.h  strerr_winsock.c  strerr_winsock.h  vec.c  vec.h.in  xmem.h
a/to_do/: daemon.c  daemon.h  debug.h  die.h  event_log_msg.mc  event_log_msg.rc  flail.h  log.c  log.h  mod.h  queue.c  queue.h  resolve.c  resolve.h  socket.c  udp.c  udp.h  util.c  util.h
config/: .cvsignore  .gitignore  bootstrap  config-build  config.h.in  configure_wrap  home.sh  mingw_home.sh  windres_wrap.sh
config/acinclude/: ccache.m4  os_type.m4  rand_dev.m4  windows.m4  yes_subst_1.m4
config/aminclude/: cflags.am  win_rc.am
config/include/: has_inttypes.h  has_stdbool.h  has_stdint.h  last_chance_stdbool.h  last_chance_stdbool_with_bool.h  last_chance_stdint.h
debug/: Makefile  Makefile.am  Makefile.in  daemon.c
devel/: daemon.c
for_lib/: queue.c
old/: buffers.c  buffers.h  byte_path_store.c  debug.h  defs.h  error.c  error.h  flail.c  flail.h  macros.h  make.include  makefile  resolve.c  resolve.h  sutil.h
old/tests/: flail.c  makefile
test/: .cvsignore  .gdb_history  .gitignore  Makefile.am  Makefile.in  bintree.c  die.c  error.c  hash.c  pot.c
test/mem/: .cvsignore  Makefile.am  strdup.c
test/test_common/: .cvsignore  Makefile.am  Makefile.in  test_common.c  test_common.h
test/to_do/: Makefile.am  byte_order_64.c  udp1.c
test/util/: .cvsignore  .gitignore  Makefile.am  Makefile.in  barename.c  basename.c  chomp.c  strcat_realloc.c  strdup.c  vsprintf_malloc.c
