SUBDIRS = a test .
EXTRA_DIST = AUTHORS COPYING ChangeLog README config/bootstrap config/configure_wrap config/include/has_inttypes.h config/include/has_stdbool.h config/include/has_stdint.h config/include/last_chance_stdbool.h config/include/last_chance_stdbool_with_bool.h config/include/last_chance_stdint.h config/home.sh config/configure_wrap
ACLOCAL_AMFLAGS = -I config/acinclude

test: check
